Login System Firebase

--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^19.0.0",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@ngrx/effects": "^20.0.1",
+    "@ngrx/store": "^20.0.1",
     "@primeng/themes": "^19.0.5",
     "@turf/turf": "^7.2.0",
     "@types/proj4": "^2.5.5",
+    "firebase": "^12.2.0",
     "ol": "^10.3.1",
     "ol-layerswitcher": "^4.1.2",
     "primeicons": "^7.0.0",
-    "primeng": "^19.0.5",
+    "primeng": "^19.1.4",
     "proj4": "^2.15.0",
     "rxjs": "~7.8.0",
     "tailwindcss-primeui": "^0.4.0",
